# ai-favs-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  vercel.json
app/: chat.py  ingest.py  server.py
app/apis/: database.py  dependencies.py  models.py  schemas.py
app/apis/assistant/: agent.py  agent_runner.py  router.py
app/apis/chat/: agent.py  chain.py  llm.py  models.py  router.py  schemas.py  tools.py
app/apis/collection/: crud.py  processors.py  router.py  schemas.py
app/apis/content/: chain.py  database.py  models.py  processors.py  router.py  schemas.py
app/apis/podcast/: crud.py  router.py  schemas.py
app/apis/user/: router.py  schemas.py
app/db/: crud.py  database.py  index.faiss  index.pkl  jiawei.faiss  jiawei.pkl  models.py  schemas.py
app/db/files/: ai_favs.db
app/example_data/txt/: 2023，我做过的 AI 项目.txt  2024 年，基于大模型的 Agent 如何在企业落地？.txt  2024年大模型的发力点：大模型Agent，分享6篇最新LLM Agent研究成....txt  5 Popular Machine Learning Certification....txt  5.  Next.js 带登录支付【实战项目】.txt  DeepMind终结大模型幻觉？标注事实比人类靠谱、还便宜20倍，全开源.txt  Fine-Tuning LLaMA 2_ A Step-by-Step Guid....txt  GitHub热榜第一：百万token上下文，还能生成视频，UC伯克利出品.txt  Google Cloud Next ’24：开发者应该关注的8个 AI 重大更新.txt  LLM落地思考.txt  Learn Next.js 中文教程.txt  OpenAI首次官宣语音项目，配音演员警报拉响.txt  OpenUI：开源AI前端工程师+设计师！输入文本就能生成网页UI和代码.txt  OpenVoice：开源即时声音克隆工具，15.2k星星！附试用链接，平替Ele....txt  Top Google Searches.txt  (+9 more)
app/utils/: ingest.py  llm.py  tools.py  tts.py  vectorstore.py
app/vectorestore/: index.faiss  index.pkl
demo/: chat.py  function_calling.py
migrations/: env.py
(+66 files in other folders)
