[tool.poetry]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
python-dotenv = "^1.0.1"
openai = "^1.17.1"
langchain-openai = "^0.1.3"
faiss-cpu = "^1.8.0"
langchain-cli = ">=0.0.15"
langsmith = "^0.1.51"
selenium = "^4.20.0"
pymongo = "^4.7.1"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
